# adrt

./: .gitignore  LICENSE  Patterns4numbers.py  README.md  adrt_demo.py  asd2.py  asd2_demo.py  asd2_statistics.py  common.py  fht2.py  fht2_demo.py  fht2_inplace.py  fht2d.py  fht2i.py  fht2ids.py  fht2idt.py  fht2ms.py  fht2mt.py  fht2sp.py  fht2ss.py  fht2st.py  khanipov.py  list_patterns.py  non_recursive.py  pyproject.toml  slant_stack.py
.github/workflows/: ci.yml  release.yml
adrtlib/: .clang-format  CMakeLists.txt  README.md  __init__.py  __main__.py  _adrtlib.cpp  demo.py
adrtlib/benchmark/: adrtlib_benchmark.cpp  chart.py
adrtlib/include/adrtlib/: adrtlib.hpp  common.hpp  common_algorithms.hpp  fht2d.hpp  fht2ids.hpp  fht2idt.hpp  non_recursive.hpp
adrtlib/ref/: Patterns4numbers.py  asd2.py  common.py  fht2d.py  fht2ids.py  fht2idt.py  fht2ms.py  fht2mt.py  fht2resample.py  fht2sp.py  fht2ss.py  fht2st.py  khanipov.py  non_recursive.py
adrtlib/test/: adrtlib_test.cpp
asd2/: plot.py  statistics.csv
