[project]
authors = [
  {name = "Arseniy Terekhin", email = "senyai@gmail.com"},
]
classifiers = [
  "License :: OSI Approved :: MIT License",
]
description = "A Set of Approximate Discrete Radon Transform functions"
dynamic = ["version"]
name = "adrtlib"
readme = "README.md"
requires-python = ">=3.10"
[tool.black]
line-length = 79
[build-system]
build-backend = "scikit_build_core.build"
requires = ["scikit-build-core >=0.4.3", "nanobind >=1.3.2"]
[tool.scikit-build]
cmake.source-dir = "adrtlib"
[tool.scikit-build.metadata.version]
input = "adrtlib/__init__.py"
provider = "scikit_build_core.metadata.regex"
